Bug 1351472 - Skip AddNoise if the table is unknown or disallowed to getHash r=francois

MozReview-Commit-ID: GMWs2UpiyiP

--HG--
extra : rebase_source : 9b24bf9fa6ad5aa12077f6e4ffa2ac65b0862b40